cron.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-deployment
  namespace: pirappp
spec:
  selector:
    matchLabels:
      app: cron
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: cron
    spec:
      nodeSelector:                            
        eks.amazonaws.com/nodegroup: stage   
      containers:
      - name: cron
        image: sathish8329/cron:13
        ports:
        - containerPort: 9000
        livenessProbe:
          httpGet:
            path: /cron
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /cron
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10 
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-cron-service
  namespace: pirappp
spec:
  selector:
    app: cron
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
  type: NodePort
