frtback.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frtback-deployment
  namespace: pirappp
spec:
  selector:
    matchLabels:
      app: frtback
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: frtback
    spec:
      nodeSelector:                            # Correct indentation for nodeSelector
        eks.amazonaws.com/nodegroup: stage    # Specify the node group name
      containers:
      - name: frtback
        image: sathish8329/frtback:7
        ports:
        - containerPort: 3001
        livenessProbe:
          httpGet:
            path: /frtback
            port: 3001
          initialDelaySeconds: 180
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /frtback
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-frtback-service
  namespace: pirappp
spec:
  selector:
    app: frtback
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: NodePort
