genai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-deployment
  namespace: pirappp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: genai
  template:
    metadata:
      labels:
        app: genai
    spec:
      nodeSelector:                            # Correct indentation for nodeSelector
        eks.amazonaws.com/nodegroup: prod-private    # Specify the node group name
      containers:
      - name: genai
        image: sathish8329/pythonleavebalance:3341
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10 
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: genai-service
  namespace: pirappp
spec:
  selector:
    app: genai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
