onboarding.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frtback-deployment
  namespace: pirappp
spec:
  selector:
    matchLabels:
      app: frtback
  replicas: 0
  template:
    metadata:
      labels:
        app: frtback
    spec:
      nodeSelector:                            # Correct indentation for nodeSelector
        eks.amazonaws.com/nodegroup: kovaion-spot-ng    # Specify the node group name
      containers:
      - name: frtback
        image: 627133981011.dkr.ecr.ap-south-1.amazonaws.com/onboarding:863
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-frtback-service
  namespace: pirappp
spec:
  selector:
    app: frtback
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
