performance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-performance
  namespace: pirappp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend-performance
  template:
    metadata:
      labels:
        app: frontend-performance
    spec:
      containers:
      - name: frontend
        image: sathish8329/performance:v1
        ports:
        - containerPort: 3000
        readinessProbe:  # Add readiness probe
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5  # Set failure threshold to 3

---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-frontend-service-performance
  namespace: pirappp
spec:
  selector:
    app: frontend-performance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
