pirappauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: pirappp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: sathish8329/uatauth:20
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /auth   # Change this path based on your application's health check endpoint
            port: 8080   # Port where your application is listening
          initialDelaySeconds:  180 # Delay before first probe
          periodSeconds: 10         # How often to perform the probe
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-auth-service
  namespace: pirappp
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
