pirappback.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: pirappp
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      nodeSelector:                            
        eks.amazonaws.com/nodegroup: stage   
      containers:
      - name: api
        image: sathish8329/uatbackend:857
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /api
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10 
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-api-service
  namespace: pirappp
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
