pirappfront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: pirappp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:                            # Correct indentation for nodeSelector
        eks.amazonaws.com/nodegroup: stage    # Specify the node group name
      containers:
      - name: frontend
        image: sathish8329/uatfront:763
        ports:
        - containerPort: 5001
        readinessProbe:  # Add readiness probe
          httpGet:
            path: /
            port: 5001
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5  # Set failure threshold to 5

---
apiVersion: v1
kind: Service
metadata:
  name: pirapp-frontend-service
  namespace: pirappp
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: NodePort
