agents-testing.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pirappp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agents-deployment
  namespace: pirappp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agents
      Component: agents
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: agents
        Component: agents
    spec:
      containers:
      - name: agents
        image: 627133981011.dkr.ecr.ap-south-1.amazonaws.com/delveant_agents_testing:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "20m"
            memory: "256Mi"
          limits:
            cpu: "50m"
            memory: "512Mi"
        # livenessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: 5000
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        # readinessProbe:
        #   failureThreshold: 3
        #   httpGet:
        #     path: /
        #     port: 5000
        #   initialDelaySeconds: 10
        #   periodSeconds: 5
        #   timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: agents-service
  namespace: pirappp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: agents
    Component: agents
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agents-ingress-testing
  namespace: pirappp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
  - host: agents.kovaioncloud.com
    http:
      paths:
      - backend:
          service:
            name: agents-service
            port:
              number: 80
        path: /
        pathType: Prefix
