pirappingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pirapp-ingress
  namespace: pirappp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "*.pirapp.io"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: pirapp-api-service
            port:
              number: 8000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: pirapp-auth-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pirapp-frontend-service
            port:
              number: 80
    

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pirapp-ingress-pirapp
  namespace: pirappp
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m" # Set the maximum allowed request body size to 100 MB
spec:
  rules:
  - host: "pirapp.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pirapp-frtback-service
            port:
              number: 80
