redirection.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: engage-redirection
  namespace: pirapp
spec:
  rules:
  - host: stage1-engagedata55.pirapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pirapp-frontend-service
            port:
              number: 80
  - host: engage.thehar.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redirector-service
            port:
              number: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: redirector-pod
  namespace: pirapp
spec:
  containers:
  - name: redirector-container
    image: nginx:latest
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx/conf.d

volumes:
- name: nginx-config
  configMap:
    name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: redirector-service
  namespace: pirapp
spec:
  selector:
    app: redirector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
